--- a/app/views/org_admin/templates/index.html.erb
+++ b/app/views/org_admin/templates/index.html.erb
@@ -40,14 +40,14 @@
 
       <% if current_user.can_super_admin? %>
         <li role="presentation" class="<%= action_name == 'index' ? 'active' : '' %>">
-          <%= link_to(_('All Templates'), org_admin_templates_path, { role: 'tab' }) %>
+          <%= link_to(_('All Templates'), org_admin_templates_path, { class: 'nav-link' }) %>
         </li>
       <% end %>
 
       <li role="presentation"
           class="<%= action_name == 'organisational' ? 'active' : '' %>">
 
-        <%= link_to(organisational_org_admin_templates_path, { role: 'tab' }) do %>
+        <%= link_to(organisational_org_admin_templates_path, { class: 'nav-link' }) do %>
           <% if current_user.can_super_admin? %>
             <% _('%{org_name} Templates') % { org_name: current_user.org.name } %>
           <% else %>
@@ -61,7 +61,7 @@
         <li role="presentation"
             class="<%= action_name == 'customisable' ? 'active' : '' %>">
           <%= link_to(_('Customisable Templates'),
-              customisable_org_admin_templates_path, { role: 'tab' }) %>
+              customisable_org_admin_templates_path, { class: 'nav-link' }) %>
         </li>
       <% end %>
     </ul>
