--- a/app/views/orgs/admin_edit.html.erb
+++ b/app/views/orgs/admin_edit.html.erb
@@ -14,28 +14,28 @@
 <div class="row">
   <div class="col-md-12">
     <ul class="nav nav-tabs" role="tablist">
-      <li role="profile" class="active">
-        <a href="#profile" role="tab" aria-controls="profile" data-toggle="tab"><%= _('Profile information') %></a>
+      <li role="profile" class="nav-item">
+        <a href="#profile" class="nav-link" role="tab" aria-controls="profile" data-toggle="tab"><%= _('Profile information') %></a>
       </li>
 
-      <li role="feedback">
-        <a href="#feedback" role="tab" aria-controls="feedback" data-toggle="tab"><%= _('Request feedback') %></a>
+      <li class="nav-item" role="feedback">
+        <a href="#feedback" class="nav-link" role="tab" aria-controls="feedback" data-toggle="tab"><%= _('Request feedback') %></a>
       </li>
 
-      <li role="form">
-        <a href="#departments" role="tab" aria-controls="form" data-toggle="tab"><%= _('Schools/Departments') %></a>
+      <li class="nav-item" role="form">
+        <a href="#departments" class="nav-link" role="tab" aria-controls="form" data-toggle="tab"><%= _('Schools/Departments') %></a>
       </li>
 
       <% if current_user.can_super_admin? %>
-        <li role="merge">
-          <a href="#merge" role="tab" aria-controls="form" data-toggle="tab"><%= _('Merge') %></a>
+        <li class="nav-item" role="merge">
+          <a href="#merge" class="nav-link" role="tab" aria-controls="form" data-toggle="tab"><%= _('Merge') %></a>
         </li>
       <% end %>
     </ul>
 
     <!-- render navigation tabs for the template-->
     <div class="tab-content">
-      <div role="tabpanel" class="tab-pane active" id="profile">
+      <div role="tabpanel" class="tab-pane show active" id="profile">
         <div class="card card-default">
           <div class="card-body">
             <div class="px-2">
