Added Research Structure plan support & solved issue with labels display

--- a/app/views/branded/plans/_edit_details.html.erb
+++ b/app/views/branded/plans/_edit_details.html.erb
@@ -12,5 +12,6 @@
   "dmpId": <%= dmp_fragment.id %>,
   "projectFragmentId": <%= project_fragment.id %>,
   "metaFragmentId": <%= meta_fragment.id %>,
+  "researchContext": "<%= @plan.template.context %>",
   "isTest": <%= @plan.is_test? %>
 }'/>
