--- a/app/assets/stylesheets/variables/_colours.scss
+++ b/app/assets/stylesheets/variables/_colours.scss
@@ -30,6 +30,7 @@ $color-footer-background: $color-navbar-background;
 $color-tooltip-background: $color-primary-background;
 $color-icon-bar-background: $color-white;
 
+
 // Text
 $color-primary-text: $color-white;
 $color-secondary-text: $color-grey;
@@ -64,3 +65,11 @@ $color-fa: $color-grey;
 
 // Focus colors
 $color-focus-outline: $color-blue-alice-darkest;
+
+// Accordion colors
+$color-accordion-button: $color-white;
+$color-accordion-button-icon: $color-white;
+$color-accordion-button-bg: $color-grey-darkest;
+$color-accordion-button-active-bg:  darken($color-accordion-button-bg, 10%) ;
+
+
