--- a/app/views/guidances/_guidance_display.html.erb
+++ b/app/views/guidances/_guidance_display.html.erb
@@ -3,14 +3,14 @@
 <div class="question-guidance">
   <div class="accordion" id="<%= question.id %>-guidance">
     <% if !question.guidance_annotation(current_user.org).nil? && question.guidance_annotation(current_user.org) != "" %>
-      <div class="accordion-group">
-        <div class="accordion-heading">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
           <a class="accordion-guidance-link" data-toggle="collapse" data-parent="#<%= question.id %>-guidance" href="#collapse-guidance-<%= question.id%>">
             <div class="accordion_heading_text">
             <%= question.section.phase.template.org.abbreviation %> <%= _('Guidance')%>
             </div>
             <span class="plus-laranja"> </span></a>
-        </div>
+        </h2>
         <div id="collapse-guidance-<%= question.id%>" class="guidance-accordion-body collapse">
           <div class="accordion-inner">
             <div class="display-readonly-textarea-content">
@@ -22,14 +22,15 @@
     <% end %>
 
     <% question.guidance_for_org(current_user.org).each_pair do |title,guidance| %>
-      <div class="accordion-group">
-        <div class="accordion-heading">
-          <a class="accordion-guidance-link" data-toggle="collapse" data-parent="#<%= question.id %>-guidance" href="#collapse-guidance-<%= guidance.id%>-<%= question.id %>">
+      <div class="accordion-item w-100 my-3">
+        <h2 class="accordion-header" role="tab">
+          <div class="accordion-guidance-link" data-bs-toggle="collapse" data-bs-parent="#<%= question.id %>-guidance" href="#collapse-guidance-<%= guidance.id%>-<%= question.id %>">
             <div class="accordion_heading_text">
             <%= title %>
-            </div>
+          </div>
             <span class="plus-laranja"> </span></a>
-        </div>
+
+        </h2>
         <div id="collapse-guidance-<%= guidance.id%>-<%= question.id %>" class="guidance-accordion-body collapse">
           <div class="accordion-inner">
             <div class="display-readonly-textarea-content">
