Issue #3144 - Bootstrap 5 accordion replaces old accordion for: -  Usage Statistics page. - Write Plan on Plan's page. - Template Phase Details accordion sections.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -98,7 +98,7 @@
 
 
         <%# Updated with Bootstrap 5 built in spinner %>
-        <div class="spinner-border text-dark d-none" role="status">
+        <div class="spinner-border d-none" role="status">
           <span class="visually-hidden"><%spinner_msg = _("Loading...") %></span>
         </div>
 
