Updated footer text

--- a/app/views/branded/layouts/_footer.html.erb
+++ b/app/views/branded/layouts/_footer.html.erb
@@ -9,8 +9,8 @@
   <div class="footer-links-logos">
     <div class="footer-links">
       <span><a href="<%= about_us_path %>"><%= _('About') %></a></span>
-      <span><a href="<%= terms_path %>"><%= _('Terms of use') %></a></a></span>
-      <span><a href="<%= privacy_path %>"><%= _('Privacy statement') %></a></span>
+      <span><a href="<%= terms_path %>"><%= _('Legal notice') %></a></a></span>
+      <span><a href="<%= privacy_path %>"><%= _('Privacy policy') %></a></span>
       <span class="break-point">•</span>
       <span>
         <a href="https://opidor.fr/category/dmp-faq/" title="DMPOPIDoR FAQ - <%= _("Opens in new window") %>" target="_blank">
