--- a/app/assets/stylesheets/dmpopidor/_footer.scss
+++ b/app/assets/stylesheets/dmpopidor/_footer.scss
@@ -62,8 +62,22 @@
       }
 
       &:first-of-type {
+        
+        @keyframes shake {
+          0% { transform: rotate(0deg); }
+          25% { transform: rotate(5deg); }
+          50% { transform: rotate(0eg); }
+          75% { transform: rotate(-5deg); }
+          100% { transform: rotate(0deg); }
+        }
+
         img {
           margin-bottom: 20px;
+          transition: 1s all ease-in-out;
+
+          &:hover {
+            animation: shake 0.25s linear infinite;
+          }
         }
 
         span {
@@ -108,6 +122,18 @@
 
     .footer-sn {
       font-size: 30px;
+
+      span {
+        a {
+          text-decoration: none;
+        }
+
+        img, i {
+          &:hover {
+            transform: scale(1.1);
+          }
+        }
+      }
 
       img {
         &:nth-of-type(1) {
