--- a/app/assets/stylesheets/dmpopidor/_navs.scss
+++ b/app/assets/stylesheets/dmpopidor/_navs.scss
@@ -91,6 +91,7 @@ div.navbar-ex1-collapse {
 }
 
 ul.dropdown-menu.dmpopidor-dropdown {
+  z-index: 1;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 2px 5px;
 }
 
@@ -125,6 +126,14 @@ ul.dropdown-menu.dmpopidor-dropdown {
   .navbar-default .navbar-nav>.open>a:focus {
     color: $dark-blue !important;
     background-color: $white !important;
+  }
+
+  .navbar-default .navbar-nav>.active>a,
+  .navbar-default .navbar-nav>.active>a:hover,
+  .navbar-default .navbar-nav>.active>a:focus {
+    color: $white !important;
+    background-color: $dark-blue !important;
+    font-weight: bold;
   }
 
   .navbar-default .navbar-nav>li>a {
@@ -324,6 +333,13 @@ ul.dropdown-menu.dmpopidor-dropdown {
   .navbar-default .navbar-nav>li>a {
     color: $dark-blue !important;
     text-decoration: none;
+  }
+
+  .navbar-default .navbar-nav>.active>a,
+  .navbar-default .navbar-nav>.active>a:hover,
+  .navbar-default .navbar-nav>.active>a:focus {
+    color: $white !important;
+    background-color: $dark-blue !important;
   }
 
   .navbar-collapse li {
