refactor: update header links style

--- a/app/assets/stylesheets/dmpopidor/_new_window_popup.scss
+++ b/app/assets/stylesheets/dmpopidor/_new_window_popup.scss
@@ -2,6 +2,12 @@
 
 a.has-new-window-popup-info,
 button.has-new-window-popup-info {
+  text-transform: none;
+  
+  & > span.new-window-popup-info {
+    text-transform: none;
+  }
+
   z-index:4;
   &:hover,
   &:focus,
