--- a/app/assets/stylesheets/dmpopidor/_news.scss
+++ b/app/assets/stylesheets/dmpopidor/_news.scss
@@ -8,7 +8,7 @@
   padding: 50px 20px;
 
   border-radius: 20px;
-  box-shadow: 5px 5px 5px $light-grey;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 2px 5px;
 
   .news-item {
     flex: 1 1 33.333%;
