refactor: update footer anchors

--- a/app/views/branded/layouts/_contact_icons.html.erb
+++ b/app/views/branded/layouts/_contact_icons.html.erb
@@ -10,7 +10,7 @@
       <span><%= _('Contact Us') %></span>
     <% end %>
   <% end %>
-  <a class="contact-icon" href="<%= contact_us %>">
+  <a class="contact-icon" href="<%= contact_us+'#content' %>">
     <i class="fas fa-wrench"></i>
     <span><%= _('Technical Support') %></span>
   </a>
