--- a/app/views/branded/layouts/_footer.html.erb
+++ b/app/views/branded/layouts/_footer.html.erb
@@ -16,22 +16,22 @@
   </div>
   <div class="footer-col">
     <span class="footer-col-title"><%= _('Navigation') %></span>
-    <span><a href="<%= help_path %>"><%= _('Help') %></a></span>
-    <span><a href="<%= public_templates_path %>"><%= _('DMP Templates') %></a></span>
+    <span><a href="<%= help_path+'#content' %>"><%= _('Help') %></a></span>
+    <span><a href="<%= public_templates_path+'#content' %>"><%= _('DMP Templates') %></a></span>
     <span><a href="#"><%= _('Learn more') %></a></span>
-    <span><a href="<%= news_feed_path %>"><%= _('News') %></a></span>
+    <span><a href="<%= news_feed_path+'#content' %>"><%= _('News') %></a></span>
     <span>
       <a href="https://opidor.fr/category/dmp-faq/" title="DMPOPIDoR FAQ - <%= _("Opens in new window") %>" target="_blank">
         <%= _('FAQ') %>
       </a>
     </span>
-    <span><a href="<%= contact_us %>"><%= _('Contact Us') %></a></span>
+    <span><a href="<%= contact_us+'#content' %>"><%= _('Contact Us') %></a></span>
   </div>
   <div class="footer-col">
     <span class="footer-col-title"><%= _('About') %></span>
-    <span><a href="<%= about_us_path %>"><%= _('About') %></a></span>
-    <span><a href="<%= terms_path %>"><%= _('Terms of use') %></a></span>
-    <span><a href="<%= privacy_path %>"><%= _('Privacy statement') %></a></span>
+    <span><a href="<%= about_us_path+'#content' %>"><%= _('About') %></a></span>
+    <span><a href="<%= terms_path+'#content' %>"><%= _('Terms of use') %></a></span>
+    <span><a href="<%= privacy_path+'#content' %>"><%= _('Privacy statement') %></a></span>
     <span>
       <a title="DMPOPIDoR Github - <%= _("Opens in new window") %>" target="_blank" href="<%= Rails.configuration.x.application.url %>" target="_blank">
         Github <i class="fab fa-github"></i>
@@ -40,7 +40,7 @@
   </div>
   <div class="footer-col">
     <span class="footer-col-title"><%= _('Ecosystem') %></span>
-    <span><a href="<%= about_us_path %>"><%= _('About') %></a></span>
+    <span><a href="<%= about_us_path+'#content' %>"><%= _('About') %></a></span>
     <span>
       <%= link_to("http://www.opidor.fr/", title: _("OPIDoR website") + " - " + _("Opens in new window"), target: '_blank')  do %>
         <%= image_tag("opidor-logo-white.png", alt: 'OPIDoR logo (opens in a new window)') %>
